Fix: Header Search Select Spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -96,7 +96,7 @@
 
         p {
           padding: 2px;
-          font-size: 15px;
+          font-size: 12px;
           font-weight: 600;
           letter-spacing: 1px;
           white-space: nowrap;
@@ -129,7 +129,7 @@
 
     .select-niche {
       height: 38px;
-      width: 6%;
+      width: 8%;
       padding: 0 0 0 5px;
       font-size: $font-size-12px;
       background-color: #e6e6e6;
